Moving hero banner out of viewport to prevent load on mobile

--- a/modules/widgets/hero/hero.scss
+++ b/modules/widgets/hero/hero.scss
@@ -118,7 +118,8 @@ $3dsize: 6px;
     min-height: 0;
 
     .background {
-      display: none;
+      position: fixed;
+      top: 200%;
     }
 
     .slides {
